navbar links renamed for course types

--- a/ielts.html
+++ b/ielts.html
@@ -22,7 +22,7 @@
 	<meta name="robots" content="ALL">
 	<meta name="keywords" content="英会話　神戸, 英会話　三宮, 　英会話　マンツーマン, 英会話サンミハールランゲージサービス　サンミハール, Sun Mihall, Sunmihall">
 	<meta name="author" content="神戸・三宮の英会話サンミハールランゲージサービス">
-	<meta name="Description" content="留学準備なら神戸三宮の英会話スクール、サンミハールランゲージサービス。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。ホームステイ先の選択もお手伝いします。帰国子女や子供、中高生の英会話も。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。無料体験レッスン受付中！"
+	<meta name="Description" content="TOEFL、IELTS対策なら神戸三宮の英会話スクール、サンミハールランゲージサービス。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達と英検、TOEIC、TOEFL、IELTS他試験対策を同時に学べます。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。無料体験レッスン受付中！"
 	/>
 
 	<meta property="og:title" content="神戸・三宮の英会話サンミハールランゲージサービス">
@@ -155,67 +155,67 @@
 						</a>
 						<ul class="dropdown-menu">
 							<li>
-								<a href="lesson-course-everyday.html#kaiwa">
+								<a href="everyday-english.html#kaiwa">
 									日常英会話
 								</a>
 							</li>
 							<li>
-								<a href="lesson-course-everyday.html#business">
+								<a href="everyday-english.html#business">
 									ビジネス英会話
 								</a>
 							</li>
 							<li>
-								<a href="lesson-course-everyday.html#prep">
+								<a href="everyday-english.html#prep">
 									海外赴任準備
 								</a>
 							</li>
 							<li>
-								<a href="lesson-course-toeic.html#ielts">
+								<a href="ielts.html#ielts">
 									IELTS・TOEFL
 								</a>
 							</li>
 							<li>
-								<a href="lesson-course-toeic.html#toeic">
+								<a href="ielts.html#toeic">
 									TOEIC・英検
 								</a>
 							</li>
 							<li>
-								<a href="lesson-course-medical.html">
+								<a href="medical-english.html">
 									医療英会話
 								</a>
 							</li>
 							<li>
-								<a href="lesson-course-corporate.html#corporate">
+								<a href="corporate-lessons.html#corporate">
 									法人向け英語研修
 								</a>
 							</li>
 							<li>
-								<a href="lesson-course-corporate.html#english">
+								<a href="corporate-lessons.html#english">
 									英文校正サービス
 								</a>
 							</li>
 							<li>
-								<a href="lesson-course-airline.html#airline">
+								<a href="ICAO.html#airline">
 									航空英語
 								</a>
 							</li>
 							<li>
-								<a href="lesson-course-airline.html#icao">
+								<a href="ICAO.html#icao">
 									ICAO対策
 								</a>
 							</li>
 							<li>
-								<a href="lesson-course-travel.html#abroad">
+								<a href="travel-english.html#abroad">
 									留学準備
 								</a>
 							</li>
 							<li>
-								<a href="lesson-course-travel.html#returnee">
+								<a href="travel-english.html#returnee">
 									帰国子女
 								</a>
 							</li>
 							<li>
-								<a href="lesson-course-travel.html#kids">
+								<a href="travel-english.html#kids">
 									子供英会話
 								</a>
 							</li>
@@ -244,15 +244,12 @@
 		</div>
 	</nav>
 
-	<div class="page-header header-filter header-small" data-parallax="true" style="background-image: url('assets/img/study-2.jpg');">
+	<div class="page-header header-filter header-small" data-parallax="true" style="background-image: url('assets/img/bg10.jpg');">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<h4>神戸・三宮の英会話サンミハールランゲージサービスの</h4>
-					<h1 class="title">留学準備</h1>
-					<h1 class="title">
-						帰国子女・子供英会話
-					</h1>
+					<h1 class="title">資格試験対策</h1>
 				</div>
 			</div>
 		</div>
@@ -270,24 +267,27 @@
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 text-center">
 							<h4 class="title">神戸・三宮の英会話サンミハールランゲージサービス</h4>
-							<h2 class="title">留学準備</h2>
-							<h2 class="title">帰国子女・子供英会話</h2>
+							<h2 class="title">IELTS・TOEFL・TOEIC・英検
+							</h2>
 						</div>
 					</div>
 
 					<div class="row">
 						<div class="col-md-3">
-							<a href="#abroad" class="btn btn-primary btn-round" style="width: 100%">留学準備</a>
-							<a href="#returnee" class="btn btn-primary btn-round" style="width: 100%">帰国子女の英語</a>
-							<a href="#kids" class="btn btn-primary btn-round" style="width: 100%">子供英会話</a>
+							<a href="#ielts" class="btn btn-primary btn-round" style="width: 100%">IELTS</a>
+							<a href="#toefl" class="btn btn-primary btn-round" style="width: 100%">TOEFL</a>
+							<a href="#toeic" class="btn btn-primary btn-round" style="width: 100%">TOEIC</a>
+							<a href="#eiken" class="btn btn-primary btn-round" style="width: 100%">英検</a>
 						</div>
 						<div class="col-md-8 col-md-offset-1">
-							<h5>神戸三宮英会話サンミハールの小学生、中学生、高校生、大学生の為のレッスンはマンツーマンや兄弟姉妹でのレッスンが最適です。 家庭教師のような個人レッスンで、子供達と楽しくかつ効率的に目標達成を目指します。
-								暗記一辺倒の日本の試験対策では太刀打ちできない海外の英語資格試験にも対応できる英語コミュニケーション能力を身に付け、 国際人になるお手伝いをいたします。
+							<h5>IELTS（アイエルツ）、TOEFL（トフル）、TOEIC（トーイック）、英検他各種試験対策を経験豊かなネイティブ講師の指導と日本人スタッフによる無料のカウンセリングで目標達成！<br><br>								★ 試験対策をサンミハールに決めた理由<br> ① 無料体験レッスンで、実際のテスト形式の授業を受けて自分にもできると思えた。<br> ② 目標をクリアして海外に行った友人の口コミを聞いて。<br>								③ 料金がお手頃な上にネイティブの授業なので試験対策をしながら会話力もアップできそう。
 							</h5>
-							<!-- <div class="col-sm-12 text-center" style="margin-top: 30px;">
+							<h5>★実際のレッスン内容は？<br> 語学力の世界基準であるCEFRにも対応した英会話サンミハールのレベルチェックまたはPractice Test等による弱点の解析を行い、個人にあったレッスンプランを立てて短期、長期での目標設定をします。実践に即したレッスン内容で、その都度評価の確認ができるので、今自分がどのレベルにいるのか、後何をすれば良いのかが具体的にわかります。<br><br>								TOEIC SpeakingやWriting、英検の作文に二次面接試験、そしてTOEFL・IELTSのWritingにSpeakingの対策は試験対策の経験豊かなネイティブに教わるのが効果的。試験全般にわたる弱点の改善、強化すべき点は授業外の日本人カウンセラーによって無料で行われます。また解き方のコツなども日本語での解説が必要な場合は教師に授業中に、または日本人カウンセラーに授業外で日本語で聞くことが出来ます。サンミハールでは自分で出来ることは自分で、出来ないことは授業でやりましょうという、経済的で効果的な試験対策を行っています。
+								<br> ◎初心者の方には基礎的な英語力の養成を授業で行いつつ、宿題等によって中学英語レベルまで引き上げ試験の対策に移ります。
+							</h5>
+							<div class="col-sm-12 text-center" style="margin-top: 30px;">
 								<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
-							</div> -->
+							</div>
 						</div>
 					</div>
 
@@ -373,125 +373,149 @@
 					<div class="row">
 
 						<div class="col-md-10 col-md-offset-1">
-							<h2 class="title">留学準備 帰国子女・子供英会話コース</h2>
+							<h2 class="title">試験対策コース</h2>
 
 							<br />
-							<div class="anchor" style="display: hidden; position: relative; top: -100px" id="abroad"></div>
+
+							<div class="anchor" style="display: hidden; position: relative; top: -100px" id="ielts"></div>
 							<div class="card card-plain card-blog">
 								<div class="row">
 									<div class="col-md-4">
-										<div class="card-image">
-											<img class="img img-raised" src="assets/img/examples/campus.jpg" />
-										</div>
-									</div>
-									<div class="col-md-8">
-										<h3 class="card-title u-margin-top-small-tablet">
-											<a href="#">留学準備</a>
-										</h3>
-										<p>
-											留学する方の年齢、目的によって日本で準備すべき内容が変わってきます。サンミハールではおひとりおひとりの年齢、目的に合わせてオーダーメイドで学習する内容を一緒に作り、来る日に備えます。</p>
-										<ul>
-											<li>
-												<h4>語学留学</h4>
-												<p>海外の語学学校で学びたい方が出発までに最低限知っておきたい内容を学びます。<br> ★ クラスでの英会話・・・あいさつ、自己紹介、校内の道順、教師への質問、クラスでの発言、文法用語、メールなど<br>													★ 日常生活の英会話・・・乗り物、道順、レストラン、ショッピング、ホテル、電話、クレーム、依頼など<br> ★ 緊急時の英会話・・・荷物の紛失、事故、病気のときの薬局、病院での会話など<br>													★ ホームステイ先での英会話・・・シャワーや食事、洗濯のルール、お手伝い、休日のアクティビティ、日帰り旅行など<br> ★ 渡航先の文化や慣習について<br> ★ 日本文化について
-												</p>
-											</li>
-											<li>
-												<h4>語学留学</h4>
-												<p>海外の語学学校で学びたい方が出発までに最低限知っておきたい内容を学びます。<br> ★ クラスでの英会話・・・あいさつ、自己紹介、校内の道順、教師への質問、クラスでの発言、文法用語、メールなど<br>													★ 日常生活の英会話・・・乗り物、道順、レストラン、ショッピング、ホテル、電話、クレーム、依頼など<br> ★ 緊急時の英会話・・・荷物の紛失、事故、病気のときの薬局、病院での会話など<br>													★ ホームステイ先での英会話・・・シャワーや食事、洗濯のルール、お手伝い、休日のアクティビティ、日帰り旅行など<br> ★ 渡航先の文化や慣習について<br> ★ 日本文化について
-												</p>
-											</li>
-											<li>
-												<h4>海外の大学・大学院留学</h4>
-												<p>上記の語学留学の内容に加えて、TOEFL・ IELTSの対策を行います。TOEFL・ IELTSで入学基準を満たしている方は、大学での授業の受け方、レポートの書き方など、よりアカデミックな内容を学びます。<br>
-													<a href="lesson-course-toeic.html">→ TOEFL・IELTS対策のページ </a>
-												</p>
-											</li>
-											<li>
-												<h4>留学先の選定</h4>
-												<p>留学先を決めるには情報の収集が欠かせません。出発時の会話力の到達レベルと予算、そして留学の目的をはっきりさせておくことが大事です。もちろんそのお手伝い は無料で出来ます。 また、安心して語学留学したい方、ホームステイしたい方には、海外在住のサンミハールの元教師や、スタッフ、友人が経営する良心価格のホームステイ先や大学斡旋会社を無料でご紹介致します。</p>
-											</li>
-										</ul>
-										<div class="col-sm-12 text-center" style="margin-top: 30px;">
-											<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
-										</div>
-									</div>
-								</div>
-							</div>
-
-							<hr class="hr-dark-blue">
-
-							<div class="anchor" style="display: hidden; position: relative; top: -100px" id="returnee"></div>
-							<div class="card card-plain card-blog">
-								<div class="row">
-									<div class="col-md-4">
-										<div class="card-image">
-											<img class="img img-raised" src="assets/img/examples/returnee.jpg" />
-										</div>
-									</div>
-									<div class="col-md-8">
-										<h3 class="card-title u-margin-top-small-tablet">
-											<a href="#">帰国子女の英語</a>
-										</h3>
-										<p>
-											子供のころに海外で身につけた英語力を帰国後、保持することは結構大変です。せっかくの財産を見す見す無駄にしたくない。日本の学校に通いながら、英会話力を保持するためにはサンミハールのような実績のある英会話スクールに通わせるのもひとつの方法です。よくある年齢でクラス分けされた子供英会話ではなくプライベートレッスン（マンツーマン）もしくは兄弟姉妹でのセミプライベートレッスンなど個々の状況に応じて、学ぶ内容を変えられるサンミハールのレッスンは帰国子女の英語力の保持に適していると言えます。
-										</p>
-										<ul>
-											<li>
-												<h4>特色</h4>
-												<p>
-													サンミハールのレッスンでは本人が飽きずに楽しんで出来ることを教師、スタッフとご家族皆さんで話し合って決めることが出来ます。
-												</p>
-											</li>
-											<li>
-												<h4>レッスン内容の例</h4>
-												<p>
-													★ 海外の学校で習っていた教科書を使ってその続きの勉強<br> ★ 会話力のみの保持を目的とした日常英会話のレッスン<br> ★ 将来の海外進学を視野に入れての読み書きの授業
-												</p>
-											</li>
-										</ul>
-										<div class="col-sm-12 text-center" style="margin-top: 30px;">
-											<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
-										</div>
-									</div>
-								</div>
-							</div>
-
-							<hr class="hr-dark-blue">
-
-							<div class="anchor" style="display: hidden; position: relative; top: -100px" id="kids"></div>
-							<div class="card card-plain card-blog">
-								<div class="row">
-									<div class="col-md-4">
-										<div class="card-image">
-											<img class="img img-raised" src="assets/img/examples/子供英会話三宮.jpg" alt="子供英会話三宮" />
-										</div>
-									</div>
-									<div class="col-md-8">
-										<h3 class="card-title u-margin-top-small-tablet">
-											<a href="#">子供英会話</a>
-										</h3>
-										<p>
-											英語の習得は早ければ早い程良いと言われていますが、例えば２歳から２年間英会話スクールに通っても、幼稚園で友達との遊びや他の習い事に興味を持ち始めやめてしまうパターンが多いのが現状です。
-										</p>
-										<p>
-											幼児期は物事の吸収は早いですが、他に興味が移ってしまえば忘れるのも早いです。語学力は継続によって維持されますから子供達のモチベーションをキープし、次のステップへつなげていくことが大切です。サンミハールでは日本語の読み書きがある程度出来るようになった小学校高学年から英会話のレッスンを始め、中学英語に繋げることを推奨しています。小学４年、５年生で楽しく英会話をすることを学び、６年生で中学英語を会話ベースで学びます。中学校で優秀な成績を修めることで英会話だけでなく読み書き文法を含んだ英語を学ぶ楽しみを覚え高校留学または大学留学へと繋がっていった卒業生の方がたくさんいます。
-										</p>
-										<ul>
-											<li>
-												<h4>特色</h4>
-												<p>プライベートレッスン（マンツーマン）、または兄弟姉妹、お友達とのセミプライベートレッスンで、子供の能力に合わせて無理なく楽しく学べます。</p>
-											</li>
-											<li>
-												<h4>レッスン内容の例</h4>
-												<p>
-													★ ピクチャーディクショナリーを使用した単語やフレーズの練習<br> ★ フォニックスや発音記号を使った読み方、綴り方の練習<br> ★ 子供向け日常英会話のテキストを使った会話練習<br>													★ 今流行っているゲームの登場人物を使ってのロールプレイ練習<br> ★ 英語の歌詞の練習<br> ★ 中学校の英語の教科書をもとにした会話の練習<br> ★ 受験に向けての対策や文法等、英語全般のレッスン
-												</p>
-												<p>神戸三宮で子供英会話をと思われたなら、子供達の個性を重視してマンツーマンで学べるサンミハールへ。中高生の英語試験対策、受験英語対策もお任せください。</p>
-											</li>
-											<div class="col-sm-12 text-center" style="margin-top: 30px;">
-												<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
+										<a href="http://www.eiken.or.jp/ielts/" target="_blank">
+											<div class="card-image">
+												<img class="img img-raised" src="assets/img/examples/ielts.jpg" />
 											</div>
+										</a>
+									</div>
+									<div class="col-md-8">
+										<h3 class="card-title u-margin-top-small-tablet">
+											<a href="http://www.eiken.or.jp/ielts/" target="_blank">IELTS</a>
+										</h3>
+										<p>
+											神戸・三宮の英会話サンミハールランゲージサービスは神戸三宮で一番にIELTS（アイエルツ）対策コースを開始したスクールです。IELTS（アイエルツ）のスピーキングと同時にIELTS（アイエルツ）のリーディングやIELTS（アイエルツ）のリスニングでのメモの取り方も授業で学べます。また、IELTSのライティングのポイントは授業で実際の作文の作業は自宅または空き教室で行うので大変経済的です。TOEFL（トフル）対策と同様、各セクションの対策を全般的に行う、または、個々の能力によって必要なセクション用の対策を別々に行うことが出来ます。
+											IELTS （アイエルツ）5.0、5.5、6.0、6.5、7.0、7.5、8.0、8.5、9.0　目標の方の対策です。
+										</p>
+										<ol>
+											<li>IELTS （アイエルツ）　ボキャビル対策（語彙を増やす</li>
+											<li>IELTS（アイエルツ） リスニング対策</li>
+											<li>IELTS （アイエルツ）リーディング対策</li>
+											<li>IELTS （アイエルツ）ライティング（作文）対策</li>
+											<li>IELTS （アイエルツ）スピーキング対策</li>
+										</ol>
+										<p>
+											例えば、
+											<br> ライティングのトレーニング
+											<br> ほとんどの部分は宿題で行われます。 アカデミック・モジュールのTASK1は図や表からの読み取れる内容についての解説です。TASK2はトピックに対して自分の意見を理由をつけて述べる問題です。2つのタスクにはそれぞれの文章の冒頭に来るつなぎ言葉（transition
+											words）が違います。最適なつなぎ言葉を使用することによって得点アップに繋がりますので、自分なりのひな型を作ってしまい、本文にフォーカス出来る時間を作ることが短期間での対策には効果的です。
+										</p>
+										<ol>
+											<li>書き方のコツを授業で学ぶ</li>
+											<li>ライティング練習問題の宿題　箇条書き、本文の両方を提出</li>
+											<li>添削してもらった文章の見直しとポイントを授業で確認</li>
+											<li>１～３を繰り返す</li>
+										</ol>
+										<div class="col-sm-12 text-center" style="margin-top: 30px;">
+											<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
+										</div>
+									</div>
+								</div>
+							</div>
+
+							<hr class="hr-dark-blue">
+
+							<div class="anchor" style="display: hidden; position: relative; top: -100px" id="toefl"></div>
+							<div class="card card-plain card-blog">
+								<div class="row">
+									<div class="col-md-4">
+										<a href="https://www.cieej.or.jp/toefl/" target="_blank">
+											<div class="card-image">
+												<img class="img img-raised" src="assets/img/examples/tofel.jpg" />
+											</div>
+										</a>
+									</div>
+									<div class="col-md-8">
+										<h3 class="card-title u-margin-top-small-tablet">
+											<a href="https://www.cieej.or.jp/toefl/" target="_blank">TOEFL</a>
+										</h3>
+										<p>
+											神戸・三宮の英会話サンミハールランゲージサービスのTOEFL（トフル）対策はここがお得！ 自宅で出来ることは自宅で、ネイティブ講師の指導が必要な部分は授業で行いますので、自分に必要のない講義を聞くような授業にお金を払う必要がなく、無駄なく効率的にスクールを活用していただけます。TOEFL（トフル）対策は英語を聞けて、読めて、書ける、または話せるという3技能ずつを組み合わせて使用出来る能力習得の為のトレーニングを行います。
+										</p>
+										<ol>
+											<li>TOEFL （トフル）ボキャビル対策（語彙を増やす）</li>
+											<li>TOEFL （トフル）リーディング対策</li>
+											<li>TOEFL （トフル）リスニング対策</li>
+											<li>TOEFL （トフル）スピーキング対策</li>
+											<li>TOEFL （トフル）ライティング（作文）対策</li>
+											<li>TOEFL （トフル）パソコン対策</li>
+										</ol>
+										<p>の６つの対策を個人のレベル、必要性に合わせてカリキュラムを組み計画的に学んでいきます。 例えば、
+											<br> スピーキングのトレーニング
+											<br> Independent taskの対策-よく出題される仮定法や、未来形を使った文章がスラスラと出てくるようになるまで、スピーチまたはロールプレイ形式のスピーキングのトレーニング。<br>											Integrated taskの対策-スピーキングと同時にリーディングやリスニングでのメモの取り方も合わせて授業で学ぶ。<br> など。
+										</p>
+										<p>★TOEFL （トフル）対策をされた生徒さんの体験談<br> サンミハールに通っている間に高校留学を決意。2年時にニュージーランドに9か月留学、帰国後サンミハールに通いながらアメリカの大学に行くため、TOEFL（トフル）550（iBT80）点以上を目指して勉強。サンミハールでは主にスピーキングとライティングの対策を実施。高校の授業でライティング、読解を怠らず頑張ったことも手伝って約1年半で580(iBT92)点を獲得。北テキサス大学に合格。大学では1学期終了ですぐprincipal
+											listに載るオールAの成績を収めることが出来た。など多数。
+										</p>
+										<div class="col-sm-12 text-center" style="margin-top: 30px;">
+											<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
+										</div>
+									</div>
+								</div>
+							</div>
+
+							<hr class="hr-dark-blue">
+
+							<div class="anchor" style="display: hidden; position: relative; top: -100px" id="toeic"></div>
+							<div class="card card-plain card-blog">
+								<div class="row">
+									<div class="col-md-4">
+										<a href="https://www.iibc-global.org/toeic.html" target="_blank">
+											<div class="card-image">
+												<img class="img img-raised" src="assets/img/examples/card-blog4.jpg" />
+											</div>
+										</a>
+									</div>
+									<div class="col-md-8">
+										<h3 class="card-title u-margin-top-small-tablet">
+											<a href="https://www.iibc-global.org/toeic.html" target="_blank">TOEIC</a>
+										</h3>
+										<p>
+											神戸・三宮の英会話サンミハールランゲージサービスのTOEIC（トーイック）コースは短期集中でのスコアアップが有効です。その方のレベルにより、より早く目標の点数に達するまで指導します。<br>
+											<strong>初心者(中学英語の理解に自信のない方)には基礎から丁寧に授業で学べます。その後以下の対策に進みます。</strong></p>
+										<ol>
+											<li>模試を受ける。</li>
+											<li>各パートに対しての理解度を「パーセンテージで評価」した分析表を元に弱点を確認する。</li>
+											<li>各問題に対する、また個人にあった勉強方法を無料カウンセリングで細く聞いて計画を立てる。</li>
+										</ol>
+										<p>など、以上は対策の一部です。詳しくはスクールにお問い合わせください。</p>
+										<div class="col-sm-12 text-center" style="margin-top: 30px;">
+											<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
+										</div>
+									</div>
+								</div>
+							</div>
+
+							<hr class="hr-dark-blue">
+
+							<div class="anchor" style="display: hidden; position: relative; top: -100px" id="eiken"></div>
+							<div class="card card-plain card-blog">
+								<div class="row">
+									<div class="col-md-4">
+										<a href="http://www.eiken.or.jp/eiken/" target="_blank">
+											<div class="card-image">
+												<img class="img img-raised" src="assets/img/examples/eiken.jpg" />
+											</div>
+										</a>
+									</div>
+									<div class="col-md-8">
+										<h3 class="card-title u-margin-top-small-tablet">
+											<a href="http://www.eiken.or.jp/eiken/" target="_blank">英検</a>
+										</h3>
+										<p>
+											「過去問を制する者は英検を制する！」英検の一次試験対策はお金をかけず、自宅でひたすら過去問を解くこと。とは言っても、一人でできない、わからないところは、レッスンで日本語で聞いて話して弱点補強し、合格ラインへと押し上げます。一次試験の作文対策は宿題で書いて来られた作文をネイティブ講師に添削してもらうのが、ベスト！一次、二次試験を問わず、サンミハールの単語テストで語彙力アップ！英検１級、準１級、２級、準２級、３級の二次試験の面接対策は神戸・三宮の英会話サンミハールランゲージサービスのネイティブの講師に行ってもらうのが、経済的で効果的。高校１年生で準１級合格の実績！
+										</p>
+										<div class="col-sm-12 text-center" style="margin-top: 30px;">
+											<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
+										</div>
 									</div>
 								</div>
 							</div>
