--- a/index.html
+++ b/index.html
@@ -174,70 +174,70 @@
             </a>
             <ul class="dropdown-menu">
               <li>
-                <a href="lesson-course-everyday.html#kaiwa">
-                  日常英会話
-                </a>
-              </li>
-              <li>
-                <a href="lesson-course-everyday.html#business">
-                  ビジネス英会話
-                </a>
-              </li>
-              <li>
-                <a href="lesson-course-everyday.html#prep">
-                  海外赴任準備
-                </a>
-              </li>
-              <li>
-                <a href="lesson-course-toeic.html#ielts">
-                  IELTS・TOEFL
-                </a>
-              </li>
-              <li>
-                <a href="lesson-course-toeic.html#toeic">
-                  TOEIC・英検
-                </a>
-              </li>
-              <li>
-                <a href="lesson-course-medical.html">
-                  医療英会話
-                </a>
-              </li>
-              <li>
-                <a href="lesson-course-corporate.html#corporate">
-                  法人向け英語研修
-                </a>
-              </li>
-              <li>
-                <a href="lesson-course-corporate.html#english">
-                  英文校正サービス
-                </a>
-              </li>
-              <li>
-                <a href="lesson-course-airline.html#airline">
-                  航空英語
-                </a>
-              </li>
-              <li>
-                <a href="lesson-course-airline.html#icao">
-                  ICAO対策
-                </a>
-              </li>
-              <li>
-                <a href="lesson-course-travel.html#abroad">
-                  留学準備
-                </a>
-              </li>
-              <li>
-                <a href="lesson-course-travel.html#returnee">
-                  帰国子女
-                </a>
-              </li>
-              <li>
-                <a href="lesson-course-travel.html#kids">
-                  子供英会話
-                </a>
-              </li>
+								<a href="everyday-english.html#kaiwa">
+									日常英会話
+								</a>
+							</li>
+							<li>
+								<a href="everyday-english.html#business">
+									ビジネス英会話
+								</a>
+							</li>
+							<li>
+								<a href="everyday-english.html#prep">
+									海外赴任準備
+								</a>
+							</li>
+							<li>
+								<a href="ielts.html#ielts">
+									IELTS・TOEFL
+								</a>
+							</li>
+							<li>
+								<a href="ielts.html#toeic">
+									TOEIC・英検
+								</a>
+							</li>
+							<li>
+								<a href="medical-english.html">
+									医療英会話
+								</a>
+							</li>
+							<li>
+								<a href="corporate-lessons.html#corporate">
+									法人向け英語研修
+								</a>
+							</li>
+							<li>
+								<a href="corporate-lessons.html#english">
+									英文校正サービス
+								</a>
+							</li>
+							<li>
+								<a href="ICAO.html#airline">
+									航空英語
+								</a>
+							</li>
+							<li>
+								<a href="ICAO.html#icao">
+									ICAO対策
+								</a>
+							</li>
+							<li>
+								<a href="travel-english.html#abroad">
+									留学準備
+								</a>
+							</li>
+							<li>
+								<a href="travel-english.html#returnee">
+									帰国子女
+								</a>
+							</li>
+							<li>
+								<a href="travel-english.html#kids">
+									子供英会話
+								</a>
+							</li>
             </ul>
           </li>
 
