--- a/lesson-course.html
+++ b/lesson-course.html
@@ -155,67 +155,67 @@
 						</a>
 						<ul class="dropdown-menu">
 							<li>
-								<a href="lesson-course-everyday.html#kaiwa">
+								<a href="everyday-english.html#kaiwa">
 									日常英会話
 								</a>
 							</li>
 							<li>
-								<a href="lesson-course-everyday.html#business">
+								<a href="everyday-english.html#business">
 									ビジネス英会話
 								</a>
 							</li>
 							<li>
-								<a href="lesson-course-everyday.html#prep">
+								<a href="everyday-english.html#prep">
 									海外赴任準備
 								</a>
 							</li>
 							<li>
-								<a href="lesson-course-toeic.html#ielts">
+								<a href="ielts.html#ielts">
 									IELTS・TOEFL
 								</a>
 							</li>
 							<li>
-								<a href="lesson-course-toeic.html#toeic">
+								<a href="ielts.html#toeic">
 									TOEIC・英検
 								</a>
 							</li>
 							<li>
-								<a href="lesson-course-medical.html">
+								<a href="medical-english.html">
 									医療英会話
 								</a>
 							</li>
 							<li>
-								<a href="lesson-course-corporate.html#corporate">
+								<a href="corporate-lessons.html#corporate">
 									法人向け英語研修
 								</a>
 							</li>
 							<li>
-								<a href="lesson-course-corporate.html#english">
+								<a href="corporate-lessons.html#english">
 									英文校正サービス
 								</a>
 							</li>
 							<li>
-								<a href="lesson-course-airline.html#airline">
+								<a href="ICAO.html#airline">
 									航空英語
 								</a>
 							</li>
 							<li>
-								<a href="lesson-course-airline.html#icao">
+								<a href="ICAO.html#icao">
 									ICAO対策
 								</a>
 							</li>
 							<li>
-								<a href="lesson-course-travel.html#abroad">
+								<a href="travel-english.html#abroad">
 									留学準備
 								</a>
 							</li>
 							<li>
-								<a href="lesson-course-travel.html#returnee">
+								<a href="travel-english.html#returnee">
 									帰国子女
 								</a>
 							</li>
 							<li>
-								<a href="lesson-course-travel.html#kids">
+								<a href="travel-english.html#kids">
 									子供英会話
 								</a>
 							</li>
