--- a/travel-english.html
+++ b/travel-english.html
@@ -404,7 +404,7 @@
 											<li>
 												<h4>海外の大学・大学院留学</h4>
 												<p>上記の語学留学の内容に加えて、TOEFL・ IELTSの対策を行います。TOEFL・ IELTSで入学基準を満たしている方は、大学での授業の受け方、レポートの書き方など、よりアカデミックな内容を学びます。<br>
-													<a href="lesson-course-toeic.html">→ TOEFL・IELTS対策のページ </a>
+													<a href="ielts.html">→ TOEFL・IELTS対策のページ </a>
 												</p>
 											</li>
 											<li>
