Updated campaign image and top NOTICE text

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
         <div class="col-md-8 col-md-offset-2 u-margin-top-large">
           <h3 class="title">*****NOTICE*****</h3>
           <h4>
-            【冬休みのお知らせ】スクールの冬休みは12/23（日）から1/6（日）までです。この期間はお電話078-331-3035または下のお問い合わせフォームからのみ受付けしておりますのでご了承ください。
+            スクールの冬休みは12/23（日）から1/6（日）までです。この期間はお電話078-331-3035または下のお問い合わせフォームからのみ受付けしておりますのでご了承ください。
           </h4>
           <h4>
             【1月お年玉キャンペーン！】新春お年玉キャンペーンは
@@ -391,7 +391,7 @@
 
             <div class="col-md-5 col-md-offset-1">
               <div class="card card-no-shadow-background">
-                <img src="assets/img/happynewyear.png" alt="New Year Campaign">
+                <img src="assets/img/201901campaign.JPG" alt="New Year Campaign">
               </div>
             </div>
 
