--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
             スクールの冬休みは12/23（日）から1/6（日）までです。この期間はお電話078-331-3035または下のお問い合わせフォームからのみ受付けしておりますのでご了承ください。
           </h4> -->
           <h4>
-            【1月お年玉キャンペーン！】新春お年玉キャンペーンは
+            【春のウエルカムキャンペーン！】無料の体験レッスンに、更に入会金も割引 になるお得なキャンペーンは
             <a href="#campaign">こちら</a>。
           </h4>
         </div>
@@ -391,7 +391,7 @@
 
             <div class="col-md-5 col-md-offset-1">
               <div class="card card-no-shadow-background">
-                <img src="assets/img/201901campaign.JPG" alt="New Year Campaign">
+                <img src="assets/img/2019FebCampaign.JPG" alt="New Year Campaign">
               </div>
             </div>
 
@@ -401,27 +401,34 @@
                   <i class="material-icons">stars</i>
                 </div>
                 <div class="description">
-                  <h4 class="info-title text-left">1月新入会者限定！お年玉キャンペーン！</h4>
+                  <h4 class="info-title text-left">無料体験レッスン受付中!</h4>
                   <p class="text-dark-gray  text-left">
-                    1月に新たに入会される方のみの特典です。ホームページ見ました！で入会金が通常10,800円(税込)のところ5,000円OFF！ （但し、初回ご来校当日入会または体験レッスン後即日入会の場合に適用。）
+                    無料体験レッスンの流れ
                   </p>
+                  <ol>
+                    <li>ご要望、目標などを日本語で伺い、教師にお伝
+                    えします</li>
+                    <li>ネイティブ教師と目的に合わせて実際のレッス
+                    ンをお受けください(35 分くらい)</li>
+                    <li>ご感想、ご要望、教師のフィードバックを元に
+                    レッスンプランをご提案します
+                    体験レッスンを受けられても執拗な勧誘は致し
+                    ませんので、安心してお受けください。</li>
+                  </ol>
                 </div>
               </div>
 
-              <!-- <div class="info info-horizontal">
+              <div class="info info-horizontal">
                 <div class="icon icon-primary">
                   <i class="material-icons">stars</i>
                 </div>
                 <div class="description">
-                  <h4 class="info-title text-left">クリスマスキャンペーン</h4>
+                  <h4 class="info-title text-left">春のウエルカムキャンペーン実施中!(2 月末 まで)</h4>
                   <p class="text-dark-gray  text-left">
-                    期間2018年11月15日から12月末日まで<br> お得な40レッスン以上のチケットをご購入されるとプレゼントがついて更にお得になるキャンペーンです。
-                    <br> ★プライベート40レッスンご購入でプライベート１レッスンプレゼント
-                    <br> ★プライベート60レッスンご購入でプライベート2レッスンプレゼント
-                    <br><br> 他、詳しくはスクールにお問合せください。
+                    2 月に新たに入会される方のみの特典です。ホーム ページ見ました!で入会金が通常 10,800 円(税込) のところ 5,000 円 OFF!になるお得なキャンペーン です。
                   </p>
                 </div>
-              </div> -->
+              </div>
             </div>
 
           </div>
