cleaned up campaign text

--- a/index.html
+++ b/index.html
@@ -301,7 +301,8 @@
             スクールの冬休みは12/23（日）から1/6（日）までです。この期間はお電話078-331-3035または下のお問い合わせフォームからのみ受付けしておりますのでご了承ください。
           </h4> -->
           <h4>
-            【春のウエルカムキャンペーン！】無料の体験レッスンに、更に入会金も割引 になるお得なキャンペーンは
+            【春のウエルカムキャンペーン！】</h4>
+            <h4>無料の体験レッスンに、更に入会金も割引 になるお得なキャンペーンは
             <a href="#campaign">こちら</a>。
           </h4>
         </div>
@@ -405,7 +406,7 @@
                   <p class="text-dark-gray  text-left">
                     無料体験レッスンの流れ
                   </p>
-                  <ol>
+                  <ol class="text-dark-gray text-left">
                     <li>ご要望、目標などを日本語で伺い、教師にお伝
                     えします</li>
                     <li>ネイティブ教師と目的に合わせて実際のレッス
