--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
             <div class="col-md-8 col-md-offset-2 text-center">
               <h4 class="title">神戸・三宮の英会話サンミハールランゲージサービス</h4>
               <h2 class="title">キャンペーン！</h2>
-              <h5 class="text-dark-gray">このページをご訪問下さった方に入会金割引などの特典があります。また、入会後も季節ごとに様々なキャンペーンを実施中！ お得に英会話のレッスンを続けられます。キャンペーンは神戸三宮の教室内でのレッスン、WEBレッスン共に適用されます。
+              <h5 class="text-dark-gray">このページをご訪問下さった方に入会金割引などの特典があります。また、入会後も季節ごとに様々なキャンペーンを実施中！ お得に英会話のレッスンを続けられます。<br>キャンペーンは神戸三宮の教室内でのレッスン、WEBレッスン共に適用されます。
               </h5>
               <div class="section-space"></div>
             </div>
