--- a/index.html
+++ b/index.html
@@ -300,9 +300,13 @@
           <!-- <h4>
             スクールの冬休みは12/23（日）から1/6（日）までです。この期間はお電話078-331-3035または下のお問い合わせフォームからのみ受付けしておりますのでご了承ください。
           </h4> -->
-          <h4>
-            【春のウエルカムキャンペーン！】</h4>
-            <h4>無料の体験レッスンに、更に入会金も割引 になるお得なキャンペーンは
+          <h4 class="text-left">
+            話せる楽しさ、通じた喜び、一緒に笑える感動、その
+            積み重ねが言語の記憶に大きく影響します。まずは無
+            料体験レッスンであなたも!
+          </h4><br>
+          <h4>【春のスタート応援キャンペーン!】</h4>
+            <h4 class="text-left">無料の体験レッスンに、更に入会金も割引 になるお得なキャンペーンは
             <a href="#campaign">こちら</a>。
           </h4>
         </div>
@@ -382,7 +386,7 @@
             <div class="col-md-8 col-md-offset-2 text-center">
               <h4 class="title">神戸・三宮の英会話サンミハールランゲージサービス</h4>
               <h2 class="title">キャンペーン！</h2>
-              <h5 class="text-dark-gray">このページをご訪問下さった方に入会金割引などの特典があります。また、入会後も季節ごとに様々なキャンペーンを実施中！ お得に英会話のレッスンを続けられます。<br>キャンペーンは神戸三宮の教室内でのレッスン、WEBレッスン共に適用されます。
+              <h5 class="text-dark-gray text-left">このページをご訪問下さった方に入会金割引などの特典があります。また、入会後も季節ごとに様々なキャンペーンを実施中！ お得に英会話のレッスンを続けられます。<br><br>キャンペーンは神戸三宮の教室内でのレッスン、WEBレッスン共に適用されます。
               </h5>
               <div class="section-space"></div>
             </div>
@@ -392,7 +396,7 @@
 
             <div class="col-md-5 col-md-offset-1">
               <div class="card card-no-shadow-background">
-                <img src="assets/img/2019FebCampaign.JPG" alt="New Year Campaign">
+                <img src="assets/img/spring_campaign_image.JPG" alt="New Year Campaign">
               </div>
             </div>
 
@@ -424,9 +428,9 @@
                   <i class="material-icons">stars</i>
                 </div>
                 <div class="description">
-                  <h4 class="info-title text-left">春のウエルカムキャンペーン実施中!(2 月末 まで)</h4>
+                  <h4 class="info-title text-left">春のスタート応援キャンペーン!(3 月末 まで)</h4>
                   <p class="text-dark-gray  text-left">
-                    2 月に新たに入会される方のみの特典です。ホーム ページ見ました!で入会金が通常 10,800 円(税込) のところ 5,000 円 OFF!になるお得なキャンペーン です。
+                    3 月に新たに入会される方のみの特典です。ホーム ペー ジ見ました!で入会金が通常 10,800 円(税込) のところ 5,000 円 OFF!になるお得なキャンペーン です。
                   </p>
                 </div>
               </div>
