Minor changes to access text

--- a/index.html
+++ b/index.html
@@ -1220,7 +1220,7 @@
               <div class="u-margin-top-large">
                 <h4 class="info-title text-center">阪神本線・神戸高速線<br>元町駅東口から ―</h4>
                 <p>
-                  元町駅東口の改札を出て左手前の階段を上がるとJR元町東口に出ます。駅前の信号を南に渡ると三宮センター街の入り口が陽右側に見えてきます。三宮センター街を三宮方面へ向かって歩き信号を一つ渡り、次の大きな筋が生田ロードです。生田ロードを左に曲がると10秒くらいで、三宮スクール前の英会話の看板が見えます。
+                  元町駅東口の改札を出て左手前の階段を上がるとJR元町東口に出ます。駅前の信号を南に渡ると三宮センター街の入り口が陽右側に見えてきます。三宮センター街を三宮方面へ向かって歩き信号を一つ渡り、次の大きな筋が生田ロードです。生田ロードを右に曲がると10秒くらいで、三宮スクール前の英会話の看板が見えます。
                 </p>
               </div>
             </div>
