Campaign and notice updated.

--- a/index.html
+++ b/index.html
@@ -305,8 +305,8 @@
             積み重ねが言語の記憶に大きく影響します。まずは無
             料体験レッスンであなたも!
           </h4><br>
-          <h4>【春のスタート応援キャンペーン!】</h4>
-            <h4 class="text-left">無料の体験レッスンに、更に入会金も割引 になるお得なキャンペーンは
+          <h4>【キャッシュバック令和最初のキャンペーン!】</h4>
+            <h4 class="text-left">無料の体験レッスンに、更にご入会後、その場で 5,000 円キャッシュバックのお得なキャンペーン はこちら
             <a href="#campaign">こちら</a>。
           </h4>
         </div>
@@ -396,7 +396,7 @@
 
             <div class="col-md-5 col-md-offset-1">
               <div class="card card-no-shadow-background">
-                <img src="assets/img/spring_campaign_image.JPG" alt="New Year Campaign">
+                <img src="assets/img/may-campaign.JPG" alt="New Year Campaign">
               </div>
             </div>
 
@@ -428,9 +428,9 @@
                   <i class="material-icons">stars</i>
                 </div>
                 <div class="description">
-                  <h4 class="info-title text-left">春のスタート応援キャンペーン!(3 月末 まで)</h4>
+                  <h4 class="info-title text-left">令和最初のキャンペーン!(5 月末まで)</h4>
                   <p class="text-dark-gray  text-left">
-                    3 月に新たに入会される方のみの特典です。ホーム ペー ジ見ました!で入会金が通常 10,800 円(税込) のところ 5,000 円 OFF!になるお得なキャンペーン です。
+                    令和元年 5 月に新たに入会される方のみの特典で す。ホームページ見ました!で入会金が通常 10,800 円(税込)のところ 5,000 円をその場でキャッ シュバック!(体験レッスン当日入会の場合)
                   </p>
                 </div>
               </div>
